--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -192,7 +192,7 @@
                         <label class="mandatory">Processing Charges</label>
                     </div>
                     <div class="col-7">
-                        <input type="number" class="form-control" formControlName="processingCharge" placeholder="1100"
+                        <input type="number" class="form-control" formControlName="processingCharge" placeholder="1100" readonly
                             [class.isError]="controls.processingCharge.touched && controls.processingCharge.invalid" />
                         <mat-error
                             *ngIf="controls.processingCharge.errors?.pattern && controls.processingCharge.touched">
