--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -345,6 +345,6 @@
     </div>
 </form>
 
-<div class="p-3" *ngIf="showButton">
-    <kt-modal-footer (action)="action($event)" [value]="'Done'"></kt-modal-footer>
+<div class="p-3" >
+    <kt-modal-footer *ngIf="showButton && !disable" (action)="action($event)" [value]="'Done'"></kt-modal-footer>
 </div>
