--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
@@ -64,23 +64,20 @@
                     </div>
                 </div>
             </div>
-            {{payableAmountSummary}}
             <div *ngIf="payableAmountSummary">
                 <div class="table-div kt-padding-t-10">
                     <table class="table outer-border">
                         <thead>
                             <th class="transparent">Loan ID</th>
                             <th class="transparent">Part Payment Amount</th>
-                            <th class="transparent">Pending Interest Amount</th>
                             <th class="transparent">Interest Amount</th>
                             <th class="transparent">Penal Interest</th>
-                            <th class="transparent">Any Other Charges</th>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>{{payableAmountSummary?.loanDetails?.customerLoan[0].loanUniqueId}} <br>
+                                <td>{{payableAmountSummary?.loanDetails?.customerLoan[0]?.loanUniqueId}} <br>
                                     <span *ngIf="payableAmountSummary?.loanDetails?.customerLoan[1]">
-                                        {{payableAmountSummary?.loanDetails?.customerLoan[1].loanUniqueId}}
+                                        {{payableAmountSummary?.loanDetails?.customerLoan[1]?.loanUniqueId}}
                                     </span>
                                 </td>
                                 <td>{{payableAmountSummary?.partPaymentAmount}}</td>
@@ -89,13 +86,11 @@
                                         {{payableAmountSummary?.unsecuredInterest}}
                                     </span>
                                 </td>
-                                <td>{{payableAmountSummary?.payableAmountSummary}}</td>
                                 <td>{{payableAmountSummary?.securedPenalInterest}}<br>
                                     <span *ngIf="payableAmountSummary?.loanDetails?.customerLoan[1]">
                                     {{payableAmountSummary?.unsecuredPenalInterest}}
                                     </span>
                                 </td>
-                                <td>{{payableAmountSummary?.payableAmountSummary}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -119,28 +114,42 @@
                         <thead>
                             <th class="transparent">Loan ID</th>
                             <th class="transparent">Loan Amount</th>
-                            <th class="transparent">Part Payment Amount</th>
+                            <th class="transparent">Final Part Payment Amount</th>
                             <th class="transparent">Outstanding Loan Amount</th>
                             <th class="transparent">Select Payment option</th>
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="text-gray">
-                                    LOAN123<br>
-                                    LOAN332
+                                <td class="text-gray">{{paymentDetails?.customerLoan[0]?.loanUniqueId}} <br>
+                                    <span *ngIf="paymentDetails?.customerLoan?.length > 1">
+                                        {{paymentDetails?.customerLoan[1]?.loanUniqueId}}
+                                    </span>
                                 </td>
                                 <td class="text-gray">
-                                    60000<br>
-                                    15000
+                                    {{paymentDetails?.customerLoan[0]?.outstandingAmount}}<br>
+                                    <span *ngIf="paymentDetails?.customerLoan?.length > 1">
+                                        {{paymentDetails?.customerLoan[1]?.outstandingAmount}}
+                                    </span>
                                 </td>
-                                <td class="text-gray">{{partAmount?.value}}</td>
-                                <td class="text-gray">{{partAmount.value}}</td>
+                                <td class="text-gray">
+                                    {{paymentDetails?.customerLoan[0]?.partPayment}}<br>
+                                    <span *ngIf="paymentDetails?.customerLoan?.length > 1">
+                                        {{paymentDetails?.customerLoan[1].partPayment}}
+                                    </span>
+                                </td>
+                                <td class="text-gray">
+                                    {{paymentDetails?.customerLoan[0]?.newOutstandingAmount}}<br>
+                                    <span *ngIf="paymentDetails?.customerLoan?.length > 1">
+                                        {{paymentDetails?.customerLoan[1].newOutstandingAmount}}
+                                    </span>
+                                </td>
+
                                 <td class="text-gray">
                                     <button *ngIf="!paymentValue" (click)="choosePaymentMethod()"
                                         class="apply-kyc">Select
                                         Payment</button>
                                     <button *ngIf="paymentValue" (click)="choosePaymentMethod()" class="apply-kyc">
-                                        {{ paymentValue.paymentType === 'IMPS' ? 'RTGS | NEFT | IMPS' : paymentValue.paymentType | uppercase }}
+                                        {{ paymentValue.paymentType  | uppercase }}
                                     </button>
                                 </td>
                             </tr>
