bm::menu changes

--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -254,7 +254,7 @@
                                         <button *ngIf="!paymentValue" (click)="choosePaymentMethod()"
                                             class="apply-kyc">Select Payment</button>
                                         <button *ngIf="paymentValue" (click)="choosePaymentMethod()" class="apply-kyc">
-                                            {{ paymentValue.paymentType === 'IMPS' ? 'RTGS | NEFT | IMPS' : paymentValue.paymentType | uppercase }}
+                                            {{ paymentValue.paymentType | uppercase }}
                                         </button>
                                     </td>
                                 </tr>
