--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -344,7 +344,6 @@
                     </div> -->
     </div>
 </form>
-
 <div class="p-3" >
-    <kt-modal-footer *ngIf="showButton && !disable" (action)="action($event)" [value]="'Done'"></kt-modal-footer>
+    <kt-modal-footer *ngIf="showButton && !disbursed" (action)="action($event)" [value]="'Done'"></kt-modal-footer>
 </div>
