bm::minor loan details

--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
@@ -57,7 +57,7 @@
                 <span class="kt-padding-5 "></span>
                 <kt-button [value]="'View Interest EMI Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
                 <span class="kt-padding-5 "></span>
-                <kt-button [value]="'View Part Payment EMI'" [type]="'button'"></kt-button>
+                <!-- <kt-button [value]="'View Part Payment EMI'" [type]="'button'"></kt-button> -->
 
             </div>
         </div>
