--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -84,20 +84,6 @@
                         {{loan?.loanEndDate | date : 'mediumDate'}}
                     </mat-cell>
                 </ng-container>
-                <!-- <ng-container matColumnDef="actions">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let loan">
-                        <span (click)="viewLoan(loan)" class="kt-pointer font-weight-bold"
-                            *ngxPermissionsOnly="['loanDetailsView']">View Loan </span>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="new">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let loan">
-                        <button (click)="new(loan)" class="btn-transparent"
-                            *ngxPermissionsOnly="['loanApplicationAdd']">Add New Loan</button>
-                    </mat-cell>
-                </ng-container> -->
 
                 <ng-container matColumnDef="packets">
                     <mat-header-cell *matHeaderCellDef>Packets ID</mat-header-cell>
@@ -117,30 +103,14 @@
                             <ng-container *ngIf="!(loan.partRelease || loan.fullRelease)">
                                 <button mat-menu-item (click)="interestEmi(loan)">Quick Pay</button>
                                 <button mat-menu-item (click)="partPayment(loan)">Part Payment</button>
-                                <button mat-menu-item (click)="topUp(loan)">Top Up</button>
+                                <!-- <button mat-menu-item (click)="topUp(loan)">Top Up</button> -->
                                 <button *ngxPermissionsOnly="['partReleaseAdd', 'fullReleaseAdd']" mat-menu-item
                                     (click)="jewelleryRelease(loan)">Jewellery
                                     Release</button>
                             </ng-container>
-                            <button *ngxPermissionsOnly="['loanDetailsAdd']" mat-menu-item (click)="newLoan(loan)">Add
-                                New Loan</button>
+                            <!-- <button *ngxPermissionsOnly="['loanDetailsAdd']" mat-menu-item (click)="newLoan(loan)">Add
+                                New Loan</button> -->
                         </mat-menu>
-
-                        <!-- <button mat-icon-button class="btn-transparent" ngbDropdown>
-                            <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown2"
-                                role="button">
-                                <mat-icon>more_vert</mat-icon>
-                            </a>
-                            <div ngbDropdownMenu aria-labelledby="navbarDropdown2"
-                                class="dropdown-menu dropdown-menu-right">
-                                <a ngbDropdownItem (click)="viewLoan(loan)">View Loan</a>
-                                <a ngbDropdownItem (click)="interestEmi(loan)">Pay Interest EMI</a>
-                                <a ngbDropdownItem (click)="topUp(loan)">Top Up</a>
-                                <a ngbDropdownItem (click)="partPayment(loan)">Part Payment</a>
-                                <a ngbDropdownItem (click)="partRelease(loan)">Part Release</a>
-                                <a ngbDropdownItem (click)="new(loan)">Add New Loan</a>
-                            </div>
-                        </button> -->
                     </mat-cell>
                 </ng-container>
 
