--- a/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
@@ -22,7 +22,8 @@
             </div>
             <div class="col form-label" *ngIf="showLoanTransferFlag || showLoanFlag">
                 <label class="kt-padding-l-10 kt-padding-r-25">Pawn Ticket/Copy of Pledge</label>
-                <kt-button [value]="'print'" [type]="'button'" (click)="ExportAsPdf()" *ngIf="showLoanFlag"></kt-button>
+                <kt-button [value]="'print'" [type]="'button'" (click)="ExportAsPdf()"
+                    *ngIf="showLoanFlag && !controls?.pawnCopyImage?.value"></kt-button>
             </div>
             <div class="col form-label" *ngIf="showLoanFlag">
                 <label class="kt-padding-l-10">Scheme Confirmation Copy</label>
