bm::changes for releaser

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
@@ -15,7 +15,7 @@
 
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
-                    <mat-cell *matCellDef="let deposit">{{deposit.masterLoan.customer.customerUniqueId | titlecase}}
+                    <mat-cell *matCellDef="let deposit">{{deposit.masterLoan.customer.customerUniqueId | uppercase}}
                     </mat-cell>
                 </ng-container>
 
