--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user/internal-user-list/internal-user-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user/internal-user-list/internal-user-list.component.html
@@ -23,15 +23,14 @@
                         </div>
                     </mat-cell>
                 </ng-container>
-                <!-- <ng-container matColumnDef="role">
+                <ng-container matColumnDef="role">
                     <mat-header-cell *matHeaderCellDef>Role Name</mat-header-cell>
                     <mat-cell *matCellDef="let user">
                         <div class="text-color">
-                            {{user.firstName | titlecase}}
-                            {{user.lastName | titlecase}}
+                            {{user.roles[0].roleName | titlecase}}
                         </div>
                     </mat-cell>
-                </ng-container> -->
+                </ng-container>
                 <ng-container matColumnDef="email">
                     <mat-header-cell *matHeaderCellDef>Email ID</mat-header-cell>
                     <mat-cell *matCellDef="let user">
