--- a/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-list/customer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-list/customer-list.component.html
@@ -31,9 +31,9 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell [ngClass]="'w-200'" *matHeaderCellDef>Action</mat-header-cell>
                     <mat-cell *matCellDef="let customer" [ngClass]="'w-200'">
-                        <span class="kt-pointer" (click)="newLoan(customer)"
+                        <!-- <span class="kt-pointer" (click)="newLoan(customer)"
                             *ngxPermissionsOnly="['loanApplicationAdd']">Add New Loan</span>
-                        <span *ngxPermissionsOnly="['loanApplicationAdd']" class="px-1">|</span>
+                        <span *ngxPermissionsOnly="['loanApplicationAdd']" class="px-1">|</span> -->
                         <span class="kt-pointer" (click)="viewDetails(customer.id)">View Details</span>
                         <!-- <span class="kt-pointer" (click)="editCustomer(customer)">Edit</span>&nbsp;|&nbsp;
                             <span class="text-danger kt-pointer" (click)="deleteCustomer(customer)">Delete</span> -->
