--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
@@ -1,16 +1,19 @@
 :host{
     .mat-column-customerID{
         padding-left: 10px !important;
+        flex : 0 0 9% !important;
+    }
+    .mat-column-customerName{
         flex : 0 0 10% !important;
     }
     .mat-column-loanId{
         flex : 0 0 7% !important;
     }
     .mat-column-schemeName {
-        flex: 0 0 10% !important;
+        flex: 0 0 11% !important;
     }
     .mat-column-amount{
-        flex: 0 0 10% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-interestRate{
         flex: 0 0 8% !important;
@@ -19,16 +22,16 @@
         flex: 0 0 9% !important;
     }
     .mat-column-interestRestDays {
-        flex: 0 0 14% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-startDate  {
-        flex: 0 0 9% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-endDate  {
-        flex: 0 0 9% !important;
+        flex: 0 0 8% !important;
     }
     .mat-column-actions  {
-        flex: 0 0 8% !important;
+        flex: 0 0 5% !important;
     }
     .mat-column-new  {
         flex: 0 0 10% !important;
