--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/update-status/update-status.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/update-status/update-status.component.html
@@ -45,7 +45,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
-                                        <mat-label>Loan Amount (&#x20B9;)</mat-label>
+                                        <mat-label>Loan Amount <span class="currency">(₹)</span></mat-label>
                                     </div>
                                     <div class="col-7">
                                         <input class="form-control" formControlName="loanAmount"
@@ -61,7 +61,8 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="offset-1 col-4 form-label">
-                                        <mat-label>Principal OutStanding Amount (&#x20B9;)</mat-label>
+                                        <mat-label>Principal OutStanding Amount <span class="currency">(₹)</span>
+                                        </mat-label>
                                     </div>
                                     <div class="col-7">
                                         <input class="form-control" formControlName="outstandingAmount"
@@ -80,7 +81,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
-                                        <mat-label>Interest Amount (&#x20B9;)</mat-label>
+                                        <mat-label>Interest Amount <span class="currency">(₹)</span></mat-label>
                                     </div>
                                     <div class="col-7">
                                         <input class="form-control" formControlName="interestAmount"
@@ -97,7 +98,7 @@
                                 *ngIf="data.name === ('jewelleryReleaseApproval' || 'jewelleryReleaseFinal')">
                                 <div class="row">
                                     <div class="offset-1 col-4 form-label">
-                                        <mat-label>Ornament Release Amount (&#x20B9;)</mat-label>
+                                        <mat-label>Ornament Release Amount <span class="currency">(₹)</span></mat-label>
                                     </div>
                                     <div class="col-7">
                                         <input class="form-control" formControlName="releaseAmount"
@@ -115,7 +116,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 form-label">
-                                        <mat-label>Penal Interest (&#x20B9;)</mat-label>
+                                        <mat-label>Penal Interest <span class="currency">(₹)</span></mat-label>
                                     </div>
                                     <div class="col-7">
                                         <input class="form-control" formControlName="penalInterest"
@@ -132,7 +133,7 @@
                                 <div class="row">
                                     <div class="offset-1 col-4 form-label">
                                         <mat-label>Total Payable <br>
-                                            Amount (₹)</mat-label>
+                                            Amount <span class="currency">(₹)</span></mat-label>
                                     </div>
                                     <div class="col-7">
                                         <input class="form-control" formControlName="payableAmount"
